--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <h1 class="bebas-neue-regular">Earth Under Pressure</h1>
     <p class="deltext">What is sustainability and recycling - why is this important for the future</p>
     <a id="Nav" href="./Kilder/index.html" class="nav-button">Kilder</a>
+    <a id="Nav" href="https://www.antyhub.net/School/index.html" class="nav-button">Hub</a>
   </header>
 <div class="center">
     <div id="start">
