--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <p class="spacemake">space</p>
     <h1 class="bebas-neue-regular">Earth Under Pressure</h1>
     <p class="deltext">What is sustainability and recycling - why is this important for the future</p>
-    <ul class="nav-buttons">
-    <a id="Nav" href="./Kilder/index.html" class="nav-button">Kilder</a>
-    <a id="Nav" href="https://www.antyhub.net/School/index.html" class="nav-button">Hub</a>
+ <ul class="nav-buttons">
+      <li title="Kilder"><a id="Kilder" href="./Kilder/index.html" class="nav-button">Kilder</a>
+      <li title="Oppgaver"><a id="Oppgaver" href="https://www.antyhub.net/School/index.html" class="nav-button">Oppgaver</a>
   </ul>
 </header>
 <div class="center">
