--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="flex-container">
   <div class="box">
     <h2 class="bebas-neue-regular">How can we preserve the planet in our everyday life.</h2>
-    <p>Everyone can and should live a sustainable life. One way is to follow the EU's Sustainable Development Goals. Some of the main focuses of sustainability is less plastic so you avoid Single Use plastics. Doing it is the easiest way to start a sustainable life. Half of all the plastic produced each year is single use items like plastic straws.</p>
+    <p>Everyone can and should live a sustainable life. One way is to follow the <a href="https://international-partnerships.ec.europa.eu/policies/sustainable-development-goals_en">EU's Sustainable Development Goals</a>. Some of the main focuses of sustainability is less plastic so you avoid single use plastics. Doing it is the easiest way to start a sustainable life. Half of all the plastic produced each year is single use items like plastic straws.</p>
     <p>Another way to live more sustainable is to recycle correctly and to reduce food waste. Some way you could reduce food waste is to put food inside boxes and eat it later. This will also save you time making more food as you can just microwave the leftovers. Thirty percent of food ends up as waste and is harmful to the environment by releasing methane as it rots.</p>
     <h3 class="bebas-neue-regular">Diet</h3>
     <p>To preserve the wildlife one of the key factors can be to change your diet and reduce the amount of meat you eat. Eating more sustainable food can help the environment and reduce the amount of land we use to grow food. Dr. Hunnes says. “A vegan or plant-based diet can grow 10,000 times as many calories on one acre of land as growing an animal”    </p>
